--- a/.gitattributes
+++ b/.gitattributes
@@ -32,6 +32,10 @@
 *.css linguist-detectable=true
 *.css linguist-documentation=false
 *.css linguist-language=CSS
+# CSound Docuument source file
+*.csd linguist-detectable=true
+*.csd linguist-documentation=false
+*.csd linguist-language=CSound-Document
 # Less stylesheet file
 *.less linguist-detectable=true
 *.less linguist-documentation=false
@@ -164,7 +168,7 @@
 # End of linguist script
 
 # File info
-# File type: gitattributes file (.gitattributes)
-# File version: 4 (2022, Tuesday, June 28th at 2:32 pm PST)
-# Line count (including blank lines and compiler line): 171
+# File type: gitattributes file (*.gitattributes)
+# File version: 5 (2022, Tuesday, November 1st at 7:10 pm PST)
+# Line count (including blank lines and compiler line): 175
 # End of script
